Major refactor: Added an API and used it in the demo

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 
 CXX=em++
 
-EM_SCRIPT_OPTIONS=-s EXPORTED_FUNCTIONS='["_mainy"]' -s TOTAL_MEMORY=100000000 --js-library flif-library.js
+EM_SCRIPT_OPTIONS=-s EXPORTED_FUNCTIONS='["_mainy"]' -s TOTAL_MEMORY=100000000 --pre-js flif-pre.js --post-js flif-post.js
 
 # optimisation options
 EM_SCRIPT_OPTIONS+= -s NO_FILESYSTEM=1
@@ -23,9 +23,10 @@ EM_SCRIPT_OPTIONS+=-s DISABLE_EXCEPTION_CATCHING=1
 EM_SCRIPT_OPTIONS+=-s NO_EXIT_RUNTIME=1
 EM_SCRIPT_OPTIONS+= -s USE_SDL=0
 EM_SCRIPT_OPTIONS+=--memory-init-file 0
+EM_SCRIPT_OPTIONS+=--bind
 
 CXXFLAGS += ${EM_SCRIPT_OPTIONS}
 
-em-out/flif.html: maniac/*.hpp maniac/*.cpp image/*.hpp image/*.cpp transform/*.hpp transform/*.cpp flif-em.cpp flif-enc.cpp flif-dec.cpp common.cpp flif-enc.hpp flif-dec.hpp common.hpp flif_config.h fileio.hpp bufferio.h io.hpp io.cpp config.h Makefile flif-library.js
-	${CXX} -std=gnu++11 $(CXXFLAGS) $(LDFLAGS) -DDECODER_ONLY -DNDEBUG -Oz -g0 -Wall maniac/chance.cpp image/color_range.cpp transform/factory.cpp flif-em.cpp common.cpp flif-dec.cpp io.cpp image/crc32k.cpp -o em-out/flif.html
+em-out/flif.html: maniac/*.hpp maniac/*.cpp image/*.hpp image/*.cpp transform/*.hpp transform/*.cpp flif-enc.cpp flif-dec.cpp common.cpp flif-enc.hpp flif-dec.hpp common.hpp flif_config.h fileio.hpp bufferio.h io.hpp io.cpp config.h Makefile polyflif.cpp flif-post.js flif-pre.js
+	${CXX} -std=c++11 $(CXXFLAGS) $(LDFLAGS) -DDECODER_ONLY -DNDEBUG -Oz -g0 -Wall maniac/chance.cpp image/color_range.cpp transform/factory.cpp common.cpp flif-dec.cpp io.cpp image/crc32k.cpp polyflif.cpp -o em-out/flif.html
 
