Turn on optimisations by default

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ EM_SCRIPT_OPTIONS+= -s USE_SDL=0
 EM_SCRIPT_OPTIONS+=--memory-init-file 0
 EM_SCRIPT_OPTIONS+=--bind
 
-#OPTIMISE = 1
+OPTIMISE = 1
 
 ifdef OPTIMISE
 CXXFLAGS += -Oz -g0
